# arap_robot

./: .gitignore  README.md  frames_2025-04-28_05.27.55.gv  test_map.pgm  test_map.yaml
.devcontainer/: Dockerfile  devcontainer.json  shell_setup.sh
arap_robot/: CMakeLists.txt  package.xml
arap_robot_bringup/: CMakeLists.txt  README.md  package.xml
arap_robot_bringup/launch/: arap_navigation.launch.py  load_ros2_controllers.launch.py  nav2_test.launch.py  slam_test.launch.py
arap_robot_bringup/scripts/: arap_navigation.sh  arap_robot_gazebo.sh  diagnostic.sh  launch_test.sh  test_odometry.sh
arap_robot_custom_feature/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
arap_robot_custom_feature/maps/: building_a.yaml  building_b.yaml
arap_robot_custom_feature/scripts/: multi_map_manager_node.py
arap_robot_description/: CMakeLists.txt  README.md  package.xml  test.urdf
arap_robot_description/config/: gz_bridge.yaml  ros2_controllers.yaml  ros2_controllers_template.yaml
arap_robot_description/config/arap_robot/: ros2_controllers.yaml  ros2_controllers_template.yaml
arap_robot_description/hooks/: arap_robot_description.dsv.in  arap_robot_description.sh.in
arap_robot_description/launch/: robot_state_publisher.launch.py  rsp.launch.py  sim.launch.py  spawn.launch.py
arap_robot_description/rviz/: arap_robot_description.rviz
arap_robot_description/urdf/control/: arap_robot_ros2_control.urdf.xacro  gazebo_sim_ros2_control.urdf.xacro  velocity_control_plugin.urdf.xacro
arap_robot_description/urdf/control/ackermann/: system.xacro
arap_robot_description/urdf/control/diff/: gazebo_control.xacro  ros2_control.xacro  system.urdf.xacro  velocity_control.xacro
arap_robot_description/urdf/control/mecanum/: system.xacro
arap_robot_description/urdf/macros/: common.xacro  inertial.xacro  material.xacro  wheels.xacro
arap_robot_description/urdf/mech/: arap_robot_base.urdf.xacro  differential_wheel.urdf.xacro
arap_robot_description/urdf/robots/: arap_robot.urdf.xacro  limo.xacro
arap_robot_description/urdf/sensors/: camera.xacro  imu.urdf.xacro  imu.xacro  laser.xacro  lidar.urdf.xacro  rgbd_camera.urdf.xacro
arap_robot_gazebo/: CMakeLists.txt  README.md  package.xml
arap_robot_gazebo/config/: gazebo_bridge_params.yaml  ros_gz_bridge.yaml
arap_robot_gazebo/launch/: arap_robot.gazebo.launch.py  sim.launch.py
arap_robot_gazebo/rviz/: arap_robot_gazebo_sim.rviz
arap_robot_gazebo/worlds/: EXPORT_GOOGLE_SAT_WM.tif  ash_3d.dae  ashesi.dae  ashesi.world  cafe.world  empty.world  house.world
arap_robot_localization/: CMakeLists.txt  README.md  package.xml
arap_robot_localization/config/: ekf.yaml
arap_robot_localization/launch/: ekf.launch.py
arap_robot_navigation/: CMakeLists.txt  README.md  package.xml  setup.py
arap_robot_navigation/config/: arap_nav2_default_params.yaml  nav_params_complex.yaml
arap_robot_navigation/launch/: bringup_launch.py
arap_robot_navigation/maps/: cafe_map.yaml  cafe_world_map.yaml  crop_image.py  my_cafe_map.pgm  my_cafe_map.yaml  my_cafe_map_edited.pgm  my_cafe_map_edited.yaml
arap_robot_navigation/rviz/: nav2_default_view.rviz
arap_robot_system_tests/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
arap_robot_system_tests/arap_robot_system_tests/: square_diff_drive_controller.py
arap_robot_system_tests/scripts/: robot_nodes.py
differential_drive_controller/: CMakeLists.txt  differential_drive_plugin.xml  package.xml
differential_drive_controller/include/differential_drive_controller/: differential_drive_controller.hpp  odometry.hpp  speed_limiter.hpp  visibility_control.h
differential_drive_controller/src/: differential_drive_controller.cpp  differential_drive_controller_parameter.yaml  odometry.cpp  speed_limiter.cpp
differential_drive_controller/test/: test_load_differential_drive_controller.cpp
differential_drive_controller/test/config/: test_differential_drive_controller.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arap_robot_navigation/share/arap_robot_navigation/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arap_robot_navigation/share/arap_robot_navigation/cmake/: arap_robot_navigationConfig.cmake
install/arap_robot_navigation/share/arap_robot_navigation/config/: arap_nav2_default_params.yaml
install/arap_robot_navigation/share/arap_robot_navigation/rviz/: nav2_default_view.rviz
log/: latest_build
